2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/imove.cc:
	  Fix handling of N and Z flags for 16-bit loads of immediates to registers.
	* src/f8/main.c:
	  Use Z flag of 16-bit load to shorten startup code.

2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c,
	  src/f8/gen.c,
	  src/f8/peeph.def:
	  Improve code for conditional branches in f8 port.
	* device/include/stdlib.h,
	  device/lib/strtoll.c,
	  device/lib/strtoull.c,
	  device/lib/wcstoll.c,
	  device/lib/wcstoull.c:
	  Partial fix for bug #3798, to get atoll.

2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8.h,
	  sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/disass.cc,
	  sim/ucsim/src/sims/f8.src/f8.cc,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/ialu.cc:
	  Fixes for two-operand 16 and 16/8 bit f8 instructions.
	* src/f8/gen.c:
	  Improve use of two-operand f8 instructions. Improve f8 code generation for pointer access.
	* src/f8/peep.c:
	  Fix asm argument handling buffer overflow. Fix handling of clear via pointer.

2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix generation of invalid asm for bit-field read.
	* sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  Fix ldw y, z f8 instruction simulation.

2024-11-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/typed-enum.c,
	  support/valdiag/tests/typed-enum.c:
	  Implement C23's explicitly typed enums, see [feature-requests:#847].

2024-11-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp:
	  Fallback to std::multimap instead of boost::container::flat_multimap for all boost up to 1.85.0.
	* src/SDCCopt.c,
	  support/regression/tests/bug-3780.c: