@@ -174,6 +174,40 @@ replace restart {
 } if notVolatile(%1), notUsed(%1), notUsed('of')
 
 replace restart {
+	%2	%1
+	tst	%1
+} by {
+	%2	%1
+	; peephole 12 removed redundant tst.
+} if same(%2 'da' 'dec' 'inc' 'tst'), notVolatile(%1)
+; todo: add 'sll' 'sra' 'srl' 'rlc' 'rrc', if it is decided that they alter n flag!
+
+replace restart {
+	%2	%1
+	tstw	%1
+} by {
+	%2	%1
+	; peephole 13 removed redundant tstw.
+} if same(%2 'adcw' 'decw' 'incw' 'mul' 'negw' 'rlcw' 'sbcw' 'sllw' 'sraw' 'srlw' 'rrcw' 'sbcw' 'tstw'), notVolatile(%1)
+
+replace restart {
+	%2	%1, %3
+	tst	%1
+} by {
+	%2	%1, %3
+	; peephole 14 removed redundant tst.
+} if same(%2 'adc' 'add' 'and' 'cp' 'or' 'rot' 'sbc' 'sub' 'xor'), notVolatile(%1)
+
+; addw sp, #d does not set flags, but there is no tstw sp, either.
+replace restart {
+	%2	%1, %3
+	tstw	%1
+} by {
+	%2	%1, %3
+	; peephole 15 removed redundant tstw.
+} if same(%2 'adcw' 'addw' 'cpw' 'orw' 'sbcw' 'sllw' 'subw' 'xorw'), notVolatile(%1)
+
+replace restart {
 	jp	#%5
 } by {
 	jp	#%6
